--- a/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
+++ b/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
@@ -120,5 +120,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\trash2t.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\settings_t.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
