Last changes before deploy.  Defaults set to production values.

--- a/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
+++ b/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
@@ -88,8 +88,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable-hdpi\" />
-    <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
@@ -100,28 +98,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bcode1.png" />
+    <AndroidResource Include="Resources\drawable\QR_72x72.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bcode2t.png" />
+    <AndroidResource Include="Resources\drawable\BC_72x72.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bcode4.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\QR_72x72.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\qr1.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\BC_72x72.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\settings1t.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\send1t.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\trash2t.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\settings_t.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\QR_162x162.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
