--- a/NSPRecv/NSPRecv.Android/Properties/AndroidManifest.xml
+++ b/NSPRecv/NSPRecv.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="com.Calstrip.NSPRecv" android:installLocation="auto" android:versionCode="4">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="com.Calstrip.NSPScan" android:installLocation="auto" android:versionCode="5">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:label="NSP Recv"></application>
+	<application android:label="NSPScan" android:icon="@drawable/BC_72x72"></application>
 </manifest>
