--- a/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
+++ b/NSPRecv/NSPRecv.Android/NSPRecv.Android.csproj
@@ -112,5 +112,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xhdpi\QR_162x162.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\QR2_72x72.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\QR2_72x72.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
